# HardwareManagers

./: README.md
gimbal_manager/: CMakeLists.txt  package.xml
gimbal_manager/config/: gimbal_params.yaml
gimbal_manager/include/gimbal_manager/: gimbal_manager.hpp
gimbal_manager/launch/: gimbal_manager.launch.py
gimbal_manager/src/: gimbal_manager.cpp
hardware_managers/: CMakeLists.txt  package.xml
hardware_managers/launch/: camera_log_test.launch.py  ir_log_test.launch.py  logger_test.launch.py  system_test.launch.py  video_stream_test.launch.py
hardware_msgs/: CMakeLists.txt  package.xml
hardware_msgs/msg/: Flag.msg
ircamera_manager/: CMakeLists.txt  package.xml
ircamera_manager/config/: generic.xml
ircamera_manager/include/ircamera_manager/: ircamera_manager.hpp
ircamera_manager/launch/: ircamera_manager.launch.py
ircamera_manager/src/: ircamera_manager.cpp  manual_composition.cpp
logger/: CMakeLists.txt  package.xml
logger/include/logger/: logger.hpp
logger/launch/: logger.launch.py
logger/src/: logger.cpp
streamer/: CMakeLists.txt
streamer/include/streamer/: streamer.hpp
streamer/launch/: streamer.launch.py
streamer/src/: streamer.cpp
