<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hardware_managers</name>
  <version>0.0.0</version>
  <description>Index package for launch files and parameters for hardware managers.</description>

  <maintainer email="brycetford@gmail.com">Bryce Ford</maintainer>

  <license>Apache License 2.0</license>

  <author email="brycetford@gmail.com">Bryce Ford</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <depend>launch</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>