<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ircamera_manager</name>
  <version>0.0.0</version>
  <description>Manage Optris IR Camera.</description>

  <maintainer email="brycetford@gmail.com">Bryce Ford</maintainer>

  <license>Apache License 2.0</license>

  <author email="brycetford@gmail.com">Bryce Ford</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>px4_msgs</build_depend>
  <build_depend>hardware_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>hardware_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <depend>launch</depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>